# aws-support-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Elasticsearch Service  MSSQL_RDS_Clone_Login.sql  README.md  SECURITY.md
.github/: LABELS.md  pull_request_template.md
APIGateway/: README.md
CloudFormation/: README.md
CloudFront/: README.md
CloudHSM/: CloudHSM+CloudFormation.json  README.md
CloudSearch/: README.md
Cognito/: README.md
Config/: README.md
DRS/: README.md
DataPipeline/: Readme.md
DeveloperMobileServices/: README.md
DeviceFarm/: README.md
EC2/: README.md  TagAutoScalingVolumesGetTags.sh  TagAutoScalingVolumesSetTags.sh
EC2 Auto Scaling/: README.md
EMR/: README.md  assign_private_ip.py
ElasticTranscoder/: README.md
Elasticsearch Service/: README.md
FSxN/: README.md  (+1 more)
Glue/: README.md
LakeFormation/lf-troubleshoot/: .gitignore  README.md  pyproject.toml
LakeFormation/lf-troubleshoot/lf_troubleshoot/: __init__.py  __main__.py  cli.py  diagnose.py  engine.py
LakeFormation/lf-troubleshoot/lf_troubleshoot/skills/: access_denied.yaml  cross_account.yaml  data_lake_admin.yaml  glue_crawler.yaml  iam_allowed_principals.yaml  lf_tag_issues.yaml  migration.yaml  s3_location.yaml
LakeFormation/lf-verify/: LICENSE  README.md  TROUBLESHOOTING.md  iam-policy-template.json  main.py  pyproject.toml
LakeFormation/lf-verify/.github/workflows/: ci.yml  publish.yml
LakeFormation/lf-verify/lf_verify/: __init__.py  __main__.py  aws_client.py  checks.py  cli.py  config.py  output.py  permissions.py  resources.py  sso.py  utils.py  wizard.py
(+357 files in other folders)
